@@ -1,5 +1,6 @@
 ubuntu-dev-tools (0.137) UNRELEASED; urgency=low
 
+  [ Stefano Rivera ]
   * mk-sbuild: Make --eatmydata command line flag actually work.
   * Remove dgetlp. No longer needed.
   * Use httplib2 everywhere that we do https. The python stdlib doesn't do
@@ -11,7 +12,10 @@ ubuntu-dev-tools (0.137) UNRELEASED; urgency=low
     non-backports pocket. Implemented by making lpapicache's getSourcePackage
     smarter.
 
- -- Stefano Rivera <stefanor@debian.org>  Mon, 21 Nov 2011 09:47:00 +0200
+  [ Andreas Moog ]
+  * sponsor-patch: Check permission to unsubscribe sponsors-team (LP: #896884)
+
+ -- Andreas Moog <amoog@ubuntu.com>  Sun, 27 Nov 2011 15:54:10 +0100
 
 ubuntu-dev-tools (0.136) unstable; urgency=low
 
